added 7th modal

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <button class="show-modal">Show modal 4</button>
     <button class="show-modal">Show modal 5</button>
     <button class="show-modal">Show modal 6</button>
+    <button class="show-modal">Show modal 7</button>
     <div class="modal hidden">
       <button class="close-modal">&times;</button>
       <h1>I'm a modal window 1 😍</h1>
@@ -64,6 +65,11 @@
     <div class="modal hidden">
       <button class="close-modal">&times;</button>
       <h1>I'm a modal window 6😍</h1>
+      <p>Lorem ipsum dolor sit amet, c</p>
+    </div>
+    <div class="modal hidden">
+      <button class="close-modal">&times;</button>
+      <h1>I'm a modal window 7😍</h1>
       <p>Lorem ipsum dolor sit amet, c</p>
     </div>
     <div class="overlay hidden"></div>
