--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <button class="show-modal">Show modal 5</button>
     <button class="show-modal">Show modal 6</button>
     <button class="show-modal">Show modal 7</button>
+    <button class="show-modal">Show modal 8</button>
     <div class="modal hidden">
       <button class="close-modal">&times;</button>
       <h1>I'm a modal window 1 😍</h1>
